# Virtual-Subject-Lab

./: .env.example  .env.runpod.example  .gitignore  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md  TODO.md  alembic.ini  conftest.py  pyproject.toml  requirements-real.txt
alembic/: env.py
alembic/versions/: 20260330_000001_initial_schema.py  20260331_000002_add_contrasts_table.py
apps/api/tests/: test_health.py  test_smoke.py  test_workflow.py
apps/frontend/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
apps/frontend/public/: index.html
apps/frontend/src/: App.jsx  api.js  main.jsx
apps/frontend/src/components/: BrainCanvas.jsx  LineChart.jsx  StatusBadge.jsx
apps/frontend/src/hooks/: useHash.js
apps/frontend/src/pages/: About.jsx  Compare.jsx  Home.jsx  (+3 more)
apps/worker/tests/: test_atlas_and_storage.py  test_mock_pipeline.py  test_settings.py
docs/: portfolio-case-study.md
infra/: compose.gpu.yaml  compose.runpod.yaml  compose.yaml
infra/docker/: api.Dockerfile  frontend.Dockerfile  worker-gpu.Dockerfile  worker.Dockerfile
scripts/: backfill_checksums.py  bootstrap.sh  load_atlases.py  runpod_start.sh  smoke_test.py
src/virtual_subject/: config.py
src/virtual_subject/adapters/: atlas.py  storage.py  tribe.py
src/virtual_subject/api/: deps.py  main.py
src/virtual_subject/db/: bootstrap.py  models.py  session.py
src/virtual_subject/domain/: constants.py  utils.py
src/virtual_subject/services/: app_service.py
src/virtual_subject/worker/: main.py
tests/: test_api.py  test_service.py  test_tribe_adapter.py
(+21 files in other folders)
